--- a/contentScript.css
+++ b/contentScript.css
@@ -1,3 +1,13 @@
 body {
   background-color: palegreen !important;
 }
+
+.search {
+  display: block;
+  margin-top: 40px;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  padding: 10px;
+  cursor: pointer;
+}
